# VulkanVsOpenGL

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  VKGLMTL-app  cmake_install.cmake  glslcCompile.sh  main.cpp  run.sh
project/: gl.h  vk.h
shaders/: fMain.frag  vMain.vert
shaders/gl/: fMain.glsl  vMain.glsl
shaders/source/: fMain.spv  vMain.spv
